--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Adinovus</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?417434784"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?293111533" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?4238082677" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -29,26 +29,32 @@
  </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- column -->
-   <div class="SlideShowWidget clearfix colelem" id="slideshowu69"><!-- none box -->
-    &nbsp;
-    <div class="popup_anchor" id="u80popup">
-     <div class="SlideShowContentPanel clearfix fullscreen" id="u80"><!-- stack box -->
-      <div class="SSSlide gradient clip_frame fullscreen" id="u191"><!-- image -->
-       <img class="ImageInclude" id="u191_img" data-src="images/resistor.jpg" src="images/blank.gif" alt="" data-width="1160" data-height="870"/>
-      </div>
-      <div class="SSSlide invi gradient clip_frame fullscreen" id="u233"><!-- image -->
-       <img class="ImageInclude" id="u233_img" data-src="images/kmr-m6.jpg" src="images/blank.gif" alt="" data-width="1160" data-height="868"/>
+  <div id="page"><!-- column -->
+   <div class="_page f3s_top" id="_page-f3s_top"></div>
+   <div class="_page f3s_mid clearfix" id="_page-f3s_mid">
+    <div class="position_content" id="page_position_content">
+     <div class="SlideShowWidget clearfix colelem" id="slideshowu69"><!-- none box -->
+      &nbsp;
+      <div class="popup_anchor" id="u80popup">
+       <div class="SlideShowContentPanel clearfix fullscreen" id="u80"><!-- stack box -->
+        <div class="SSSlide gradient clip_frame fullscreen" id="u191"><!-- image -->
+         <img class="ImageInclude" id="u191_img" data-src="images/resistor.jpg" src="images/blank.gif" alt="" data-width="1160" data-height="870"/>
+        </div>
+        <div class="SSSlide invi gradient clip_frame fullscreen" id="u233"><!-- image -->
+         <img class="ImageInclude" id="u233_img" data-src="images/kmr-m6.jpg" src="images/blank.gif" alt="" data-width="1160" data-height="868"/>
+        </div>
+       </div>
       </div>
      </div>
+     <div class="clearfix colelem" id="pu242-5"><!-- group -->
+      <img class="grpelem" id="u242-5" src="images/u242-5.png" alt="Adinovus" width="574" height="114"/><!-- rasterized frame -->
+      <img class="grpelem" id="u248-4" src="images/u248-4.png" alt="technologies" width="313" height="58"/><!-- rasterized frame -->
+     </div>
+     <a class="nonblock nontext clip_frame colelem" id="u280" href="home.html"><!-- image --><img class="block" id="u280_img" src="images/arow-rigt2.png" alt="" width="106" height="106"/></a>
+     <div class="verticalspacer"></div>
     </div>
    </div>
-   <div class="clearfix colelem" id="pu242-5"><!-- group -->
-    <img class="grpelem" id="u242-5" src="images/u242-5.png" alt="Adinovus" width="574" height="114"/><!-- rasterized frame -->
-    <img class="grpelem" id="u248-4" src="images/u248-4.png" alt="technologies" width="313" height="58"/><!-- rasterized frame -->
-   </div>
-   <a class="nonblock nontext clip_frame colelem" id="u280" href="home.html"><!-- image --><img class="block" id="u280_img" src="images/arow-rigt2.png" alt="" width="106" height="106"/></a>
-   <div class="verticalspacer"></div>
+   <div class="_page f3s_bot" id="_page-f3s_bot"></div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
