--- a/apps.html
+++ b/apps.html
@@ -7,10 +7,16 @@
   <title>Apps</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?417434784"/>
-  <link rel="stylesheet" type="text/css" href="css/apps.css?3939255405" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?4059569944"/>
+  <link rel="stylesheet" type="text/css" href="css/apps.css?4205803212" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
+var __adobewebfontsappname__ = "muse";
+</script>
+  <!-- JS includes -->
+  <script type="text/javascript">
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/pt-mono:n4:all;inconsolata:n5:all.js" type="text/javascript">\x3C/script>');
 </script>
     <!--custom head HTML-->
   <script>
@@ -27,45 +33,105 @@
  </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="u1041-5"><!-- content -->
-    <p id="u1041-2">Sorry, this page is under maintenence</p>
-    <p>&nbsp;</p>
+  <div id="page"><!-- column -->
+   <div class="_page f3s_top" id="_page-f3s_top"></div>
+   <div class="_page f3s_mid clearfix" id="_page-f3s_mid">
+    <div class="position_content" id="page_position_content">
+     <div class="clearfix colelem" id="pu3829"><!-- group -->
+      <div class="grpelem" id="u3829"><!-- simple frame --></div>
+      <div class="grpelem" id="u3830"><!-- group -->
+       <div class="_u3830 f3s_top clearfix" id="_u3830-f3s_top">
+        <div class="clip_frame grpelem" id="u3831"><!-- image -->
+         <img class="block" id="u3831_img" src="images/logo%20final.png" alt="" width="96" height="72"/>
+        </div>
+        <ul class="MenuBar clearfix grpelem" id="menuu3835"><!-- horizontal box -->
+         <li class="MenuItemContainer clearfix grpelem" id="u3877"><!-- vertical box -->
+          <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3878"><!-- group -->
+           <a class="nonblock nontext grpelem" id="u3878" href="home.html"><!-- horizontal box --><div class="_u3878 f3s_top clearfix" id="_u3878-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3879-4"><!-- content --><p>Home</p></div></div></a>
+          </div>
+         </li>
+         <li class="MenuItemContainer clearfix grpelem" id="u3891"><!-- vertical box -->
+          <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3892"><!-- group -->
+           <a class="nonblock nontext grpelem" id="u3892" href="home.html#whatwedo"><!-- horizontal box --><div class="_u3892 f3s_top clearfix" id="_u3892-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3893-4"><!-- content --><p>Services</p></div></div></a>
+          </div>
+          <div class="SubMenu  MenuLevel1 clearfix" id="u3896"><!-- vertical box -->
+           <ul class="SubMenuView clearfix colelem" id="u3897"><!-- vertical box -->
+            <li class="MenuItemContainer clearfix colelem" id="u3905"><!-- horizontal box -->
+             <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3906"><!-- group -->
+              <a class="nonblock nontext shadow grpelem" id="u3906" href="projects.html"><!-- horizontal box --><div class="_u3906 f3s_top clearfix" id="_u3906-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3908-4"><!-- content --><p>Embedded Projects</p></div></div></a>
+             </div>
+            </li>
+            <li class="MenuItemContainer clearfix colelem" id="u3898"><!-- horizontal box -->
+             <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3899"><!-- group -->
+              <a class="nonblock nontext shadow grpelem" id="u3899" href="diy-kits.html"><!-- horizontal box --><div class="_u3899 f3s_top clearfix" id="_u3899-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3901-4"><!-- content --><p>Do It Yourself Kits</p></div></div></a>
+             </div>
+            </li>
+            <li class="MenuItemContainer clearfix colelem" id="u3912"><!-- horizontal box -->
+             <div class="sbg MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="pu3913"><!-- group -->
+              <a class="nonblock nontext shadow grpelem" id="u3913" href="apps.html"><!-- horizontal box --><div class="_u3913 f3s_top clearfix" id="_u3913-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3915-4"><!-- content --><p>Apps</p></div></div></a>
+             </div>
+            </li>
+           </ul>
+          </div>
+         </li>
+         <li class="MenuItemContainer clearfix grpelem" id="u3849"><!-- vertical box -->
+          <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3873"><!-- group -->
+           <a class="nonblock nontext grpelem" id="u3873" href="home.html#support"><!-- horizontal box --><div class="_u3873 f3s_top clearfix" id="_u3873-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3875-4"><!-- content --><p>Support</p></div></div></a>
+          </div>
+          <div class="SubMenu  MenuLevel1 clearfix" id="u3850"><!-- vertical box -->
+           <ul class="SubMenuView clearfix colelem" id="u3851"><!-- vertical box -->
+            <li class="MenuItemContainer clearfix colelem" id="u3866"><!-- horizontal box -->
+             <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3869"><!-- group -->
+              <a class="nonblock nontext grpelem" id="u3869" href="videos.html"><!-- horizontal box --><div class="_u3869 f3s_top clearfix" id="_u3869-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3871-4"><!-- content --><p>Videos</p></div></div></a>
+             </div>
+            </li>
+            <li class="MenuItemContainer clearfix colelem" id="u3859"><!-- horizontal box -->
+             <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3862"><!-- group -->
+              <a class="nonblock nontext grpelem" id="u3862" href="training.html"><!-- horizontal box --><div class="_u3862 f3s_top clearfix" id="_u3862-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3863-4"><!-- content --><p>Training</p></div></div></a>
+             </div>
+            </li>
+            <li class="MenuItemContainer clearfix colelem" id="u3852"><!-- horizontal box -->
+             <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3853"><!-- group -->
+              <a class="nonblock nontext grpelem" id="u3853" href="docs.html"><!-- horizontal box --><div class="_u3853 f3s_top clearfix" id="_u3853-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3854-4"><!-- content --><p>Docs</p></div></div></a>
+             </div>
+            </li>
+           </ul>
+          </div>
+         </li>
+         <li class="MenuItemContainer clearfix grpelem" id="u3884"><!-- vertical box -->
+          <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3885"><!-- group -->
+           <a class="nonblock nontext grpelem" id="u3885" href="home.html#contact"><!-- horizontal box --><div class="_u3885 f3s_top clearfix" id="_u3885-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3888-4"><!-- content --><p>Contact Us</p></div></div></a>
+          </div>
+         </li>
+        </ul>
+       </div>
+      </div>
+      <div class="clip_frame grpelem" id="u3833"><!-- image -->
+       <img class="block" id="u3833_img" src="images/name%20blue.png" alt="" width="320" height="88"/>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="u1041-5"><!-- content -->
+      <p id="u1041-2">Sorry, this page is under maintenence</p>
+      <p>&nbsp;</p>
+     </div>
+     <div class="verticalspacer"></div>
+    </div>
    </div>
-   <div class="verticalspacer"></div>
-   <ul class="MenuBar clearfix grpelem" id="menuu1319"><!-- horizontal box -->
-    <li class="MenuItemContainer clearfix grpelem" id="u1348"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1349"><!-- horizontal box -->
-      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1350-4"><!-- content -->
-       <p>Home</p>
-      </div>
-     </div>
-    </li>
-    <li class="MenuItemContainer clearfix grpelem" id="u1327"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1328" href="home.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1329-4"><!-- content --><p>services</p></div></a>
-    </li>
-    <li class="MenuItemContainer clearfix grpelem" id="u1334"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1335"><!-- horizontal box -->
-      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1337-4"><!-- content -->
-       <p>support</p>
-      </div>
-     </div>
-    </li>
-    <li class="MenuItemContainer clearfix grpelem" id="u1341"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1342"><!-- horizontal box -->
-      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1343-4"><!-- content -->
-       <p>promotions</p>
-      </div>
-     </div>
-    </li>
-    <li class="MenuItemContainer clearfix grpelem" id="u1320"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1321"><!-- horizontal box -->
-      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1322-4"><!-- content -->
-       <p>contact</p>
-      </div>
-     </div>
-    </li>
-   </ul>
+   <div class="_page f3s_bot" id="_page-f3s_bot"></div>
+  </div>
+  <div class="preload_images">
+   <img class="preload" src="images/u3128-r-full.png" alt=""/>
+   <img class="preload" src="images/u3128-m-full.png" alt=""/>
+   <img class="preload" src="images/u3149-r-full.png" alt=""/>
+   <img class="preload" src="images/u3149-m-full.png" alt=""/>
+   <img class="preload" src="images/u3411-r-full.png" alt=""/>
+   <img class="preload" src="images/u3411-a-full.png" alt=""/>
+   <img class="preload" src="images/u3163-r-full.png" alt=""/>
+   <img class="preload" src="images/u3163-m-full.png" alt=""/>
+   <img class="preload" src="images/u3482-r-full.png" alt=""/>
+   <img class="preload" src="images/u3482-a-full.png" alt=""/>
+   <img class="preload" src="images/u3154-r-full.png" alt=""/>
+   <img class="preload" src="images/u3154-m-full.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
