--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
   <title>Adinovus</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?417434784"/>
-  <link rel="stylesheet" type="text/css" href="css/home.css?125727160" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/home.css?3761778778" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -121,7 +121,9 @@ var __adobewebfontsappname__ = "muse";
      <div class="clearfix colelem" id="pu1014"><!-- group -->
       <a class="nonblock nontext shadow rounded-corners clip_frame grpelem" id="u1014" href="projects.html"><!-- image --><img class="block" id="u1014_img" src="images/zx81_pcb.jpg" alt="" width="137" height="137"/></a>
       <a class="nonblock nontext shadow rounded-corners clip_frame grpelem" id="u1004" href="diy-kits.html"><!-- image --><img class="block" id="u1004_img" src="images/example3.jpg" alt="" width="137" height="137"/></a>
-      <a class="nonblock nontext shadow rounded-corners clip_frame grpelem" id="u4248" href="apps.html"><!-- image --><img class="block" id="u4248_img" src="images/mobile-app-developer.jpg" alt="" width="137" height="137"/></a>
+      <div class="shadow rounded-corners clip_frame grpelem" id="u4255"><!-- image -->
+       <img class="block" id="u4255_img" src="images/mobile-app-developer-1.jpg" alt="" width="137" height="137"/>
+      </div>
      </div>
      <div class="clearfix colelem" id="u598-3"><!-- content -->
       <p>&nbsp;</p>
@@ -222,15 +224,15 @@ var __adobewebfontsappname__ = "muse";
    <div class="_page f3s_bot" id="_page-f3s_bot"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u3128-r-full.png" alt=""/>
-   <img class="preload" src="images/u3149-r-full.png" alt=""/>
-   <img class="preload" src="images/u3149-m-full.png" alt=""/>
-   <img class="preload" src="images/u3411-r-full.png" alt=""/>
-   <img class="preload" src="images/u3163-r-full.png" alt=""/>
-   <img class="preload" src="images/u3163-m-full.png" alt=""/>
-   <img class="preload" src="images/u3482-r-full.png" alt=""/>
-   <img class="preload" src="images/u3154-r-full.png" alt=""/>
-   <img class="preload" src="images/u3154-m-full.png" alt=""/>
+   <img class="preload" src="images/u4194-a-full.png" alt=""/>
+   <img class="preload" src="images/u4224-r-full.png" alt=""/>
+   <img class="preload" src="images/u4224-m-full.png" alt=""/>
+   <img class="preload" src="images/u4211-r-full.png" alt=""/>
+   <img class="preload" src="images/u4159-r-full.png" alt=""/>
+   <img class="preload" src="images/u4159-m-full.png" alt=""/>
+   <img class="preload" src="images/u4182-r-full.png" alt=""/>
+   <img class="preload" src="images/u4189-r-full.png" alt=""/>
+   <img class="preload" src="images/u4189-m-full.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
