--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Adinovus</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?475048684"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3818926226" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?4146110980" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -107,56 +107,56 @@
        <div class="MenuItemContainer clearfix colelem" id="u5289"><!-- horizontal box -->
         <div class="MenuItem MenuItemWithSubMenu rounded-corners clearfix grpelem" id="u5290"><!-- horizontal box -->
          <div class="MenuItemLabel clearfix grpelem" id="u5292-4"><!-- content -->
-          <p>Embedded Linux projects</p>
+          <p id="u5292-2">Embedded Linux projects</p>
          </div>
         </div>
        </div>
        <div class="MenuItemContainer clearfix colelem" id="u5282"><!-- horizontal box -->
         <div class="MenuItem MenuItemWithSubMenu rounded-corners clearfix grpelem" id="u5283"><!-- horizontal box -->
          <div class="MenuItemLabel clearfix grpelem" id="u5284-4"><!-- content -->
-          <p>Electronics Projects</p>
+          <p id="u5284-2">Electronics Projects</p>
          </div>
         </div>
        </div>
        <div class="MenuItemContainer clearfix colelem" id="u5268"><!-- horizontal box -->
         <div class="MenuItem MenuItemWithSubMenu rounded-corners clearfix grpelem" id="u5271"><!-- horizontal box -->
          <div class="MenuItemLabel clearfix grpelem" id="u5272-4"><!-- content -->
-          <p>Software Projects</p>
+          <p id="u5272-2">Software Projects</p>
          </div>
         </div>
        </div>
        <div class="MenuItemContainer clearfix colelem" id="u5296"><!-- horizontal box -->
         <div class="MenuItem MenuItemWithSubMenu rounded-corners clearfix grpelem" id="u5299"><!-- horizontal box -->
          <div class="MenuItemLabel clearfix grpelem" id="u5301-4"><!-- content -->
-          <p>Do It Yourself Kits</p>
+          <p id="u5301-2">Do It Yourself Kits</p>
          </div>
         </div>
        </div>
        <div class="MenuItemContainer clearfix colelem" id="u5317"><!-- horizontal box -->
         <div class="MenuItem MenuItemWithSubMenu rounded-corners clearfix grpelem" id="u5318"><!-- horizontal box -->
          <div class="MenuItemLabel clearfix grpelem" id="u5320-4"><!-- content -->
-          <p>Sensor Modules</p>
+          <p id="u5320-2">Sensor Modules</p>
          </div>
         </div>
        </div>
        <div class="MenuItemContainer clearfix colelem" id="u5303"><!-- horizontal box -->
         <div class="MenuItem MenuItemWithSubMenu rounded-corners clearfix grpelem" id="u5304"><!-- horizontal box -->
          <div class="MenuItemLabel clearfix grpelem" id="u5307-4"><!-- content -->
-          <p>Training Boards</p>
+          <p id="u5307-2">Training Boards</p>
          </div>
         </div>
        </div>
        <div class="MenuItemContainer clearfix colelem" id="u5275"><!-- horizontal box -->
         <div class="MenuItem MenuItemWithSubMenu rounded-corners clearfix grpelem" id="u5278"><!-- horizontal box -->
          <div class="MenuItemLabel clearfix grpelem" id="u5281-4"><!-- content -->
-          <p>Tutorials</p>
+          <p id="u5281-2">Tutorials</p>
          </div>
         </div>
        </div>
        <div class="MenuItemContainer clearfix colelem" id="u5310"><!-- horizontal box -->
         <div class="MenuItem MenuItemWithSubMenu rounded-corners clearfix grpelem" id="u5311"><!-- horizontal box -->
          <div class="MenuItemLabel clearfix grpelem" id="u5314-4"><!-- content -->
-          <p>Videos</p>
+          <p id="u5314-2">Videos</p>
          </div>
         </div>
        </div>
