index page added extra

--- a/docs.html
+++ b/docs.html
@@ -53,7 +53,7 @@
    <nav class="MenuBar clearfix grpelem" id="menuu5675"><!-- horizontal box -->
     <div class="MenuItemContainer clearfix grpelem" id="u5690"><!-- vertical box -->
      <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu5691"><!-- group -->
-      <a class="nonblock nontext grpelem" id="u5691" href="index.html"><!-- horizontal box --><div class="_u5691 f3s_top clearfix" id="_u5691-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5694-4"><!-- content --><p>HOME</p></div></div></a>
+      <a class="nonblock nontext grpelem" id="u5691" href="home.html"><!-- horizontal box --><div class="_u5691 f3s_top clearfix" id="_u5691-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5694-4"><!-- content --><p>HOME</p></div></div></a>
      </div>
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u5676"><!-- vertical box -->
