--- a/diy-kits.html
+++ b/diy-kits.html
@@ -53,7 +53,7 @@
      <nav class="MenuBar rounded-corners clearfix grpelem" id="menuu5711"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u5726"><!-- vertical box -->
        <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu5727"><!-- group -->
-        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5727" href="index.html"><!-- horizontal box --><div class="_u5727 f3s_top clearfix" id="_u5727-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5730-4"><!-- content --><p>HOME</p></div></div></a>
+        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5727" href="home.html"><!-- horizontal box --><div class="_u5727 f3s_top clearfix" id="_u5727-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5730-4"><!-- content --><p>HOME</p></div></div></a>
        </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5712"><!-- vertical box -->
