--- a/diy-kits.html
+++ b/diy-kits.html
@@ -12,8 +12,8 @@
   <title>DIY Kits</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?475048684"/>
-  <link rel="stylesheet" type="text/css" href="css/master_c-master.css?4160718395"/>
-  <link rel="stylesheet" type="text/css" href="css/diy-kits.css?4207256786" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_c-master.css?4224856301"/>
+  <link rel="stylesheet" type="text/css" href="css/diy-kits.css?3965168912" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -53,7 +53,7 @@
      <nav class="MenuBar rounded-corners clearfix grpelem" id="menuu5711"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u5726"><!-- vertical box -->
        <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu5727"><!-- group -->
-        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5727" href="home.html"><!-- horizontal box --><div class="_u5727 f3s_top clearfix" id="_u5727-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5730-4"><!-- content --><p>HOME</p></div></div></a>
+        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5727" href="index.html"><!-- horizontal box --><div class="_u5727 f3s_top clearfix" id="_u5727-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5730-4"><!-- content --><p>HOME</p></div></div></a>
        </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5712"><!-- vertical box -->
