--- a/vlsi.html
+++ b/vlsi.html
@@ -12,8 +12,8 @@
   <title>vlsi</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?475048684"/>
-  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?247762354"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?456287226"/>
+  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?339044250"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?3993324200"/>
   <link rel="stylesheet" type="text/css" href="css/vlsi.css?51862459" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -67,7 +67,7 @@
      <nav class="MenuBar clearfix grpelem" id="menuu5675"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u5690"><!-- vertical box -->
        <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu5691"><!-- group -->
-        <a class="nonblock nontext grpelem" id="u5691" href="home.html"><!-- horizontal box --><div class="_u5691 f3s_top clearfix" id="_u5691-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5694-4"><!-- content --><p>HOME</p></div></div></a>
+        <a class="nonblock nontext grpelem" id="u5691" href="index.html"><!-- horizontal box --><div class="_u5691 f3s_top clearfix" id="_u5691-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5694-4"><!-- content --><p>HOME</p></div></div></a>
        </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5676"><!-- vertical box -->
