--- a/apps.html
+++ b/apps.html
@@ -12,8 +12,8 @@
   <title>Apps</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?475048684"/>
-  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?247762354"/>
-  <link rel="stylesheet" type="text/css" href="css/apps.css?3773787937" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?339044250"/>
+  <link rel="stylesheet" type="text/css" href="css/apps.css?489423031" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -55,7 +55,7 @@
      <nav class="MenuBar rounded-corners clearfix grpelem" id="menuu5675"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u5690"><!-- vertical box -->
        <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu5691"><!-- group -->
-        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5691" href="home.html"><!-- horizontal box --><div class="_u5691 f3s_top clearfix" id="_u5691-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5694-4"><!-- content --><p>HOME</p></div></div></a>
+        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5691" href="index.html"><!-- horizontal box --><div class="_u5691 f3s_top clearfix" id="_u5691-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5694-4"><!-- content --><p>HOME</p></div></div></a>
        </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5676"><!-- vertical box -->
