--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
   <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?475048684"/>
-  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?339044250"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?3798573533" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?3906409901"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?4125484402" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -40,7 +40,7 @@
   <div class="clearfix" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
     <div class="clearfix colelem" id="pu5607"><!-- group -->
-     <div class="clip_frame grpelem" id="u5607"><!-- image -->
+     <div class="shadow clip_frame grpelem" id="u5607"><!-- image -->
       <img class="block" id="u5607_img" src="images/circuit-motherboards_003488741.jpg" alt="" width="971" height="237"/>
      </div>
      <div class="sbg clearfix grpelem" id="pu4834"><!-- group -->
@@ -52,30 +52,30 @@
      <div class="clip_frame grpelem" id="u5659"><!-- image -->
       <img class="block" id="u5659_img" src="images/adinovus3.png" alt="" width="654" height="82"/>
      </div>
-     <nav class="MenuBar clearfix grpelem" id="menuu5675"><!-- horizontal box -->
+     <nav class="MenuBar rounded-corners clearfix grpelem" id="menuu5675"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u5690"><!-- vertical box -->
        <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu5691"><!-- group -->
-        <a class="nonblock nontext grpelem" id="u5691" href="index.html"><!-- horizontal box --><div class="_u5691 f3s_top clearfix" id="_u5691-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5694-4"><!-- content --><p>HOME</p></div></div></a>
+        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5691" href="index.html"><!-- horizontal box --><div class="_u5691 f3s_top clearfix" id="_u5691-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5694-4"><!-- content --><p>HOME</p></div></div></a>
        </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5676"><!-- vertical box -->
        <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu5677"><!-- group -->
-        <a class="nonblock nontext grpelem" id="u5677" href="robotics.html"><!-- horizontal box --><div class="_u5677 f3s_top clearfix" id="_u5677-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5680-4"><!-- content --><p>PROJECTS</p></div></div></a>
+        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5677" href="robotics.html"><!-- horizontal box --><div class="_u5677 f3s_top clearfix" id="_u5677-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5680-4"><!-- content --><p>PROJECTS</p></div></div></a>
        </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5683"><!-- vertical box -->
        <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu5686"><!-- group -->
-        <a class="nonblock nontext grpelem" id="u5686" href="diy-kits.html"><!-- horizontal box --><div class="_u5686 f3s_top clearfix" id="_u5686-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5689-4"><!-- content --><p>DIY KITS</p></div></div></a>
+        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5686" href="diy-kits.html"><!-- horizontal box --><div class="_u5686 f3s_top clearfix" id="_u5686-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5689-4"><!-- content --><p>DIY KITS</p></div></div></a>
        </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5697"><!-- vertical box -->
        <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu5698"><!-- group -->
-        <a class="nonblock nontext grpelem" id="u5698" href="docs.html"><!-- horizontal box --><div class="_u5698 f3s_top clearfix" id="_u5698-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5701-4"><!-- content --><p>SUPPORT</p></div></div></a>
+        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5698" href="docs.html"><!-- horizontal box --><div class="_u5698 f3s_top clearfix" id="_u5698-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5701-4"><!-- content --><p>SUPPORT</p></div></div></a>
        </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5704"><!-- vertical box -->
        <div class="sbg MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="pu5705"><!-- group -->
-        <a class="nonblock nontext grpelem" id="u5705" href="contact.html"><!-- horizontal box --><div class="_u5705 f3s_top clearfix" id="_u5705-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5707-4"><!-- content --><p>CONTACT</p></div></div></a>
+        <a class="nonblock nontext rounded-corners grpelem shadow rgba-background" id="u5705" href="contact.html"><!-- horizontal box --><div class="_u5705 f3s_top clearfix" id="_u5705-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5707-4"><!-- content --><p>CONTACT</p></div></div></a>
        </div>
       </div>
      </nav>
@@ -94,12 +94,10 @@
      <div class="clip_frame grpelem" id="u5434"><!-- image -->
       <img class="block" id="u5434_img" src="images/home.png" alt="" width="52" height="52"/>
      </div>
-     <div class="clearfix grpelem" id="u5440-12"><!-- content -->
-      <p>7/14&#45;D2</p>
-      <p>Mananchira tower</p>
-      <p>A.G Road, Calicut</p>
-      <p>Kerala, India</p>
-      <p>Pin:673001</p>
+     <div class="clearfix grpelem" id="u5440-8"><!-- content -->
+      <p>4th flour, Electronics village</p>
+      <p>Kallai road, Calicut</p>
+      <p>673002</p>
      </div>
      <img class="grpelem" id="u5457" alt="" width="50" height="50" src="images/4606646420-u5457.png"/><!-- rasterized frame -->
      <div class="clearfix grpelem" id="u5473-4"><!-- content -->
@@ -132,8 +130,8 @@
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u4834-r-full.png" alt=""/>
-   <img class="preload" src="images/u5231-a-full.png" alt=""/>
-   <img class="preload" src="images/u5741-a-full.png" alt=""/>
+   <img class="preload" src="images/u5691-a-full.png" alt=""/>
+   <img class="preload" src="images/u5705-a-full.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
